--- a/main.css
+++ b/main.css
@@ -30,8 +30,6 @@
 
 html,
 body {
-  min-height: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
 }
@@ -39,23 +37,18 @@ body {
 body {
   font-size: 24px;
   background-color: #fff;
-  min-height: 100%;
   font-family: "San Francisco", Helvetica, sans-serif;
   color: #fff;
   padding: 1vw;
 }
 
 main {
-  min-height: 100%;
   background-color: #131415;
   border-radius: 58px;
 }
 
 /* mobile */
 @media (max-width: 768px) {
-  main {
-    padding-bottom: 100px;
-  }
   h1 {
     padding-bottom: 5px;
   }
@@ -63,10 +56,6 @@ main {
 
 .container {
   padding: 4vw;
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 h1 {
@@ -75,18 +64,16 @@ h1 {
   font-weight: 900;
   margin: 0;
   padding: 0;
+  line-height: 1;
 }
 
 h2 {
   font-size: 1rem;
   font-weight: 100;
   color: #ccc;
-  margin-bottom: 10vh;
-  margin-top: -15px;
 }
 
 .cards {
-  min-height: 100%;
   display: flex;
   justify-content: center;
   gap: 20px;
