--- a/main.css
+++ b/main.css
@@ -32,6 +32,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  min-height: 100vh;
 }
 
 body {
@@ -40,18 +41,14 @@ body {
   font-family: "San Francisco", Helvetica, sans-serif;
   color: #fff;
   padding: 1vw;
+  display: flex;
+  flex-direction: column;
 }
 
 main {
   background-color: #131415;
   border-radius: 58px;
-}
-
-/* mobile */
-@media (max-width: 768px) {
-  h1 {
-    padding-bottom: 5px;
-  }
+  flex: 1;
 }
 
 .container {
@@ -64,13 +61,15 @@ h1 {
   font-weight: 900;
   margin: 0;
   padding: 0;
-  line-height: 1;
+  line-height: 0.8;
+  margin-top: -32px;
 }
 
 h2 {
   font-size: 1rem;
   font-weight: 100;
   color: #ccc;
+  margin-top: -5px;
 }
 
 .cards {
@@ -269,7 +268,7 @@ Footer
 ***************/
 
 footer {
-  margin-top: -30px;
+  margin-top: -40px;
   width: 100%;
 }
 
@@ -278,4 +277,18 @@ footer {
   font-weight: 100;
   text-align: center;
   color: rgba(255, 255, 255, 0.7);
+}
+
+/* mobile */
+@media (max-width: 768px) {
+  h1 {
+    line-height: 1.8;
+  }
+  h2 {
+    margin-top: -50px;
+    padding-bottom: 30px;
+  }
+  footer {
+    margin-top: -25px;
+  }
 }
